--- a/src/app/pages/product-details/product-details.component.html
+++ b/src/app/pages/product-details/product-details.component.html
@@ -434,28 +434,48 @@
                 </button>
               </div>
               <!-- Modal body -->
-              <div class="w-full h-full p-8">
-                <div class="flex">
-                  @if(check_prices){
-                    <button id="button-price" type="button" (click)="clickShowPrice()" class="h-fit ml-4 w-fit text-primary-100 dark:text-white rounded-lg text-lg px-5 py-2.5 text-center inline-flex items-center">
-                      {{ 'CARD._price_plans' | translate }}
-                    </button>
-                  }
-                  @if(check_char){
-                    <button id="button-char" type="button" (click)="clickShowChar()" class="h-fit w-fit ml-4 text-primary-100 dark:text-white rounded-lg text-lg px-5 py-2.5 text-center inline-flex items-center">
-                      {{ 'CARD._chars' | translate }}
-                    </button>
-                  }
-                  @if(check_terms){
-                    <button id="button-terms" type="button" (click)="clickShowTerms()" class="h-fit w-fit ml-4 text-primary-100 dark:text-white rounded-lg text-lg px-5 py-2.5 text-center inline-flex items-center">
-                      {{ 'CARD._terms' | translate }}
-                    </button>
-                    }
+              <div class="w-full h-full p-8 justify-center">
+                <div class="flex flex-col w-full justify-center">
+                    <ol class="flex items-center w-full ">
+                        <li id="step-chars" class="flex w-full items-center text-white after:content-[''] after:w-full after:h-1 after:border-b after:border-primary-100 after:border-4 after:inline-block">
+                            <span id="circle-chars" class="flex items-center justify-center w-30 h-10 bg-primary-100 rounded-full lg:h-12 lg:w-12 shrink-0">
+                                1
+                            </span>                       
+                        </li>
+                        <li id="step-price" class="flex w-full items-center text-gray-400 dark:text-white after:content-[''] after:w-full after:h-1 after:border-b after:border-gray-400 after:border-4 after:inline-block">
+                            <span id="circle-price" class="flex items-center justify-center w-30 h-10 bg-white dark:bg-secondary-100 border-2 border-gray-400 rounded-full lg:h-12 lg:w-12 shrink-0">
+                                2
+                            </span>
+                        </li>
+                        <li id="step-terms" class="flex w-full items-center text-gray-400 dark:text-white after:content-[''] after:w-full after:h-1 after:border-b after:border-gray-400 after:border-4 after:inline-block">
+                            <span id="circle-terms" class="flex items-center justify-center w-30 h-10 bg-white dark:bg-secondary-100 border-2 border-gray-400  rounded-full lg:h-12 lg:w-12 shrink-0">
+                                3
+                            </span>
+                        </li>
+                        <li id="step-checkout" class="flex items-center w-fit text-gray-400 dark:text-white">
+                            <span id="circle-checkout" class="flex items-center justify-center w-30 h-10 bg-white dark:bg-secondary-100 border-2 border-gray-400 rounded-full lg:h-12 lg:w-12 shrink-0">
+                                4
+                            </span>
+                        </li>
+                    </ol>
+                    <ol class="flex w-full mt-2 justify-between">
+                        <li class="flex items-center w-fit">
+                            <span id="text-chars" class="flex w-30 text-primary-100 justify-start"> Characteristics </span>
+                        </li>
+                        <li class="flex items-center w-fit">
+                            <span id="text-price" class="flex w-30 text-gray-400 justify-center"> Price plan </span>
+                        </li>
+                        <li class="flex items-center w-fit">
+                            <span id="text-terms" class="flex w-30 text-gray-400 justify-center"> Terms and conditions </span>
+                        </li>
+                        <li class="flex w-fit">
+                            <span id="text-checkout" class="flex w-30 text-gray-400 justify-end"> Checkout </span>
+                        </li>
+                    </ol>
                 </div>
-                <hr class="h-px ml-4 mr-4 mb-2 bg-gray-300 border-0">
-                <div class="border border-gray-300 bg-secondary-50/95 rounded-lg">
-                  @if(check_prices){
+                <div class="border border-gray-300 bg-secondary-50/95 rounded-lg mt-4">
                     <div class="hidden pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4" id="price">
+                    @if(check_prices){                    
                         <h5 class="text-3xl font-semibold tracking-tight text-primary-100 ">{{ 'CARD._select_price' | translate }}:</h5>
                         <div class="grid grid-flow-col gap-8 p-4">
                         @for (price of productOff?.productOfferingPrice; track price.id; let idx = $index) {
@@ -505,12 +525,32 @@
                             </label>
                           </div>
                           }
-                      }
-                    </div>
-                    </div>
+                        }
+                        </div>                    
+                    } @else {
+                        <div class="flex justify-center w-full m-4">
+                            <div class="flex w-full items-center p-4 text-sm text-primary-100 rounded-lg bg-blue-50" role="alert">
+                                <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                                <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+                                </svg>
+                                <div>
+                                    {{ 'CARD._no_prices' | translate }}
+                                </div>
+                            </div>
+                        </div> 
                     }
-                    @if(check_char){
-                      <div class="hidden pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4" id="char">
+                        <div class="flex justify-end">
+                            <button (click)="clickShowTerms()" type="button" 
+                            class="flex w-1/4 mt-2 items-center justify-center text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2">
+                            {{ 'CARD._next' | translate }}
+                            <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                            </svg>
+                        </button>
+                        </div>
+                    </div>
+                    <div class="pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4" id="char">
+                    @if(check_char){                      
                         <h5 class="text-3xl font-semibold tracking-tight text-primary-100">{{ 'CARD._select_char' | translate }}:</h5>
                         @for(char of prodSpec.productSpecCharacteristic; track char.id; let charidx = $index){
                           <div class="min-h-19 pb-2">
@@ -531,37 +571,71 @@
                             </div>
                           }
                           </div>
+                        }                      
+                    } @else {
+                        <div class="flex justify-center w-full m-4">
+                            <div class="flex w-full items-center p-4 text-sm text-primary-100 rounded-lg bg-blue-50" role="alert">
+                                <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                                <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+                                </svg>
+                                <div>
+                                    {{ 'CARD._no_chars' | translate }}
+                                </div>
+                            </div>
+                        </div> 
+                    }
+                        <div class="flex justify-end">
+                            <button (click)="clickShowPrice()" type="button" 
+                            class="flex w-1/4 mt-2 items-center justify-center text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2">
+                            {{ 'CARD._next' | translate }}
+                            <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                            </svg>
+                        </button>
+                        </div>
+                    </div>
+                    <div class="hidden pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4" id="terms">
+                    @if(check_terms){                    
+                        <h5 class="text-3xl font-semibold tracking-tight text-primary-100">{{ 'CARD._terms' | translate }}:</h5>
+                        @for (term of productOff?.productOfferingTerm; track term.name){
+                        <p class="text-gray-900 text-bold"> <span class="font-bold">{{term.name}}:</span> {{term.description}}</p>
                         }
-                      </div>
-                      }
-                      @if(check_terms){
-                        <div class="hidden pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4" id="terms">
-                          <h5 class="text-3xl font-semibold tracking-tight text-primary-100">{{ 'CARD._terms' | translate }}:</h5>
-                          @for (term of productOff?.productOfferingTerm; track term.name){
-                            <p class="text-gray-900 text-bold"> <span class="font-bold">{{term.name}}:</span> {{term.description}}</p>
-                          }
-                          <div class="flex items-center mb-4">
+                        <div class="flex items-center mb-4">
                             <input id="terms-checkbox" type="checkbox" (change)="selected_terms=!selected_terms" value="" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500">
                             <label for="terms-checkbox" class="ms-2 text-sm font-medium text-gray-900">{{ 'CARD._accept_terms' | translate }}</label>
                         </div>
+                        <div class="flex justify-end">
+                            <button [disabled]="!selected_terms" [ngClass]="!selected_terms ? 'opacity-50' : 'hover:bg-primary-50'" (click)="addProductToCart(productOff,true)" type="button" 
+                            class="flex w-1/4 mt-2 items-center justify-center text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2">
+                            {{ 'CARD._checkout' | translate }}
+                            <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                            </svg>
+                        </button>
+                        </div>                    
+                    } @else {
+                        <div class="flex justify-center w-full m-4">
+                            <div class="flex w-full items-center p-4 text-sm text-primary-100 rounded-lg bg-blue-50" role="alert">
+                                <svg class="flex-shrink-0 inline w-4 h-4 me-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
+                                <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM9.5 4a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3ZM12 15H8a1 1 0 0 1 0-2h1v-3H8a1 1 0 0 1 0-2h2a1 1 0 0 1 1 1v4h1a1 1 0 0 1 0 2Z"/>
+                                </svg>
+                                <div>
+                                    {{ 'CARD._no_terms' | translate }}
+                                </div>
+                            </div>
                         </div>
-                      }
+                        <div class="flex justify-end">
+                            <button (click)="addProductToCart(productOff,true)" type="button" 
+                            class="flex w-1/4 mt-2 items-center justify-center text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2">
+                            {{ 'CARD._checkout' | translate }}
+                            <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                                <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                            </svg>
+                        </button>
+                        </div>  
+                    }
                     </div>
-                      @if(check_terms == true && selected_terms == false){
-                        <button disabled (click)="addProductToCart(productOff,true)" type="button" class="cursor-not-allowed mt-2 w-full flex items-center justify-center text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-                          <svg class="w-3.5 h-3.5 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 21">
-                          <path d="M15 12a1 1 0 0 0 .962-.726l2-7A1 1 0 0 0 17 3H3.77L3.175.745A1 1 0 0 0 2.208 0H1a1 1 0 0 0 0 2h.438l.6 2.255v.019l2 7 .746 2.986A3 3 0 1 0 9 17a2.966 2.966 0 0 0-.184-1h2.368c-.118.32-.18.659-.184 1a3 3 0 1 0 3-3H6.78l-.5-2H15Z"/>
-                          </svg>
-                          {{ 'CARD._add_cart' | translate }}
-                        </button>
-                      } @else {
-                        <button (click)="addProductToCart(productOff,true)" type="button" class="mt-2 w-full flex items-center justify-center text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
-                          <svg class="w-3.5 h-3.5 me-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 21">
-                          <path d="M15 12a1 1 0 0 0 .962-.726l2-7A1 1 0 0 0 17 3H3.77L3.175.745A1 1 0 0 0 2.208 0H1a1 1 0 0 0 0 2h.438l.6 2.255v.019l2 7 .746 2.986A3 3 0 1 0 9 17a2.966 2.966 0 0 0-.184-1h2.368c-.118.32-.18.659-.184 1a3 3 0 1 0 3-3H6.78l-.5-2H15Z"/>
-                          </svg>
-                          {{ 'CARD._add_cart' | translate }}
-                        </button>
-                      }
+                </div>
               </div>
           </div>
       </div>
