UPDATE cart cart - delete checkout step

--- a/src/app/shared/cart-card/cart-card.component.html
+++ b/src/app/shared/cart-card/cart-card.component.html
@@ -16,39 +16,31 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
             <div class="w-full h-full p-8 justify-center">
               <div class="flex flex-col w-full justify-center">
                   <ol class="flex items-center w-full ">
-                      <li id="step-chars" class="flex w-full items-center text-white after:content-[''] after:w-full after:h-1 after:border-b after:border-primary-100 after:border-4 after:inline-block">
+                      <li id="step-chars" (click)="clickShowChar(true)" class="flex w-full cursor-pointer items-center text-white after:content-[''] after:w-full after:h-1 after:border-b after:border-primary-100 after:border-4 after:inline-block">
                           <span id="circle-chars" class="flex items-center justify-center w-30 h-10 bg-primary-100 rounded-full lg:h-12 lg:w-12 shrink-0">
                               1
                           </span>                       
                       </li>
-                      <li id="step-price" class="flex w-full items-center text-gray-400 dark:text-white after:content-[''] after:w-full after:h-1 after:border-b after:border-gray-400 after:border-4 after:inline-block">
+                      <li id="step-price" (click)="clickShowPrice(true)" class="flex w-full cursor-pointer items-center text-gray-400 dark:text-white after:content-[''] after:w-full after:h-1 after:border-b after:border-gray-400 after:border-4 after:inline-block">
                           <span id="circle-price" class="flex items-center justify-center w-30 h-10 bg-white dark:bg-secondary-100 border-2 border-gray-400 rounded-full lg:h-12 lg:w-12 shrink-0">
                               2
                           </span>
                       </li>
-                      <li id="step-terms" class="flex w-full items-center text-gray-400 dark:text-white after:content-[''] after:w-full after:h-1 after:border-b after:border-gray-400 after:border-4 after:inline-block">
-                          <span id="circle-terms" class="flex items-center justify-center w-30 h-10 bg-white dark:bg-secondary-100 border-2 border-gray-400  rounded-full lg:h-12 lg:w-12 shrink-0">
-                              3
-                          </span>
-                      </li>
-                      <li id="step-checkout" class="flex items-center w-fit text-gray-400 dark:text-white">
-                          <span id="circle-checkout" class="flex items-center justify-center w-30 h-10 bg-white dark:bg-secondary-100 border-2 border-gray-400 rounded-full lg:h-12 lg:w-12 shrink-0">
-                              4
+                      <li id="step-terms" (click)="clickShowTerms(true)" class="flex items-center w-fit text-gray-400 dark:text-white cursor-pointer">
+                          <span id="circle-terms" class="flex items-center justify-center w-30 h-10 bg-white dark:bg-secondary-100 border-2 border-gray-400 rounded-full lg:h-12 lg:w-12 shrink-0">
+                                3
                           </span>
                       </li>
                   </ol>
                   <ol class="flex w-full mt-2 justify-between">
-                      <li class="flex items-center w-fit">
-                          <span id="text-chars" class="flex w-30 text-primary-100 justify-start"> Characteristics </span>
+                      <li class="flex items-center w-1/3 justify-start">
+                          <span id="text-chars" class="flex w-fit text-primary-100 justify-start"> Characteristics </span>
                       </li>
-                      <li class="flex items-center w-fit">
-                          <span id="text-price" class="flex w-30 text-gray-400 justify-center"> Price plan </span>
+                      <li class="flex items-center w-1/3 justify-center">
+                          <span id="text-price" class="flex w-fit text-gray-400 justify-center"> Price plan </span>
                       </li>
-                      <li class="flex items-center w-fit">
-                          <span id="text-terms" class="flex w-30 text-gray-400 justify-center"> Terms and conditions </span>
-                      </li>
-                      <li class="flex w-fit">
-                          <span id="text-checkout" class="flex w-30 text-gray-400 justify-end"> Checkout </span>
+                      <li class="flex items-center w-1/3 justify-end">
+                          <span id="text-terms" class="flex w-fit text-gray-400 justify-end"> Terms and conditions </span>
                       </li>
                   </ol>
               </div>
@@ -118,15 +110,15 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
                           </div>
                       </div> 
                   }
-                      <div class="flex justify-end">
-                          <button (click)="clickShowTerms()" type="button" 
-                          class="flex w-1/4 mt-2 items-center justify-center text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2">
-                          {{ 'CARD._next' | translate }}
-                          <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
-                              <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
-                          </svg>
-                      </button>
-                      </div>
+                    <div class="flex justify-end">
+                        <button (click)="clickShowTerms(false)" type="button" 
+                        class="flex w-1/4 mt-2 items-center justify-center text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2">
+                        {{ 'CARD._next' | translate }}
+                        <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
+                            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
+                        </svg>
+                    </button>
+                    </div>
                   </div>
                   <div class="pl-4 md:pl-8 pt-2 md:pt-4 pb-2 md:pb-4" id="char">
                   @if(check_char){                      
@@ -164,7 +156,7 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
                       </div> 
                   }
                       <div class="flex justify-end">
-                          <button (click)="clickShowPrice()" type="button" 
+                          <button (click)="clickShowPrice(false)" type="button" 
                           class="flex w-1/4 mt-2 items-center justify-center text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2">
                           {{ 'CARD._next' | translate }}
                           <svg class="rtl:rotate-180 w-3.5 h-3.5 ms-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
@@ -219,3 +211,6 @@ class="flex justify-center overflow-y-auto overflow-x-hidden fixed top-0 right-0
         </div>
     </div>
   </div>
+  @if(showError){
+    <error-message class="fixed w-fit top-1/2 left-1/2 z-50" [message]="errorMessage"></error-message>
+    }
