--- a/src/app/shared/card/card.component.html
+++ b/src/app/shared/card/card.component.html
@@ -220,7 +220,7 @@
       </div>
     </div>
     <div class="flex w-full mt-2 rounded-full h-2.5 dark:bg-gray-700">
-      <div id="progress-bar" class="flex bg-green-600 h-2.5 rounded-full dark:bg-green-500 transition-width delay-200 duration-3000 ease-out" style="width: 0px;"></div>
+      <div id="progress-bar" class="z-10 flex bg-green-600 h-2.5 rounded-full dark:bg-green-500 transition-width delay-200 duration-3000 ease-out" style="width: 0px;"></div>
     </div>
   </div>
 }
