HIDE not working buttons

--- a/src/app/offerings/explore-dome/explore-dome.component.html
+++ b/src/app/offerings/explore-dome/explore-dome.component.html
@@ -19,7 +19,7 @@
     
             </div>
 
-            <div class="flex items-center justify-center pb-8">
+            <!-- <div class="flex items-center justify-center pb-8">
                 <button type="button" class="h-fit w-fit text-primary-100 bg-white hover:bg-primary-50 hover:text-white focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center">
                     
                     <svg class="mr-2 rtl:rotate-180 w-3.5 h-3.5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
@@ -28,7 +28,7 @@
                     {{ 'EXPLORE._go' | translate }}
                 </button>
                    
-            </div>
+            </div> -->
         </div>
 
     </div>
