--- a/src/app/pages/catalogs/catalogs.component.html
+++ b/src/app/pages/catalogs/catalogs.component.html
@@ -4,7 +4,7 @@
     <p class="mb-8 text-lg font-normal text-gray-500 lg:text-xl sm:px-16 xl:px-48 dark:text-secondary-50 text-center">Choose between our Catalogs</p>
 
     <!-- HEADER SEARCH BAR -->
-    <form class="max-w-lg mx-auto mb-8">
+    <!--<form class="max-w-lg mx-auto mb-8">
       <div class="flex">
           <div class="relative w-full">
               <input type="search" id="search" [formControl]="searchField" class="block p-2.5 w-full z-20 text-sm text-gray-900 bg-gray-50 rounded-lg border-s-gray-50 border-s-2 border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-s-gray-700  dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-blue-500"
@@ -17,7 +17,7 @@
               </button>
           </div>
       </div>
-    </form>
+    </form>-->
 
 
     @if (loading) {
