--- a/src/app/offerings/gallery/gallery.component.html
+++ b/src/app/offerings/gallery/gallery.component.html
@@ -1,5 +1,5 @@
 <!-- Offerings Gallery section -->
-<h2 class="text-4xl font-extrabold text-primary-100 text-center dark:text-primary-50">{{ 'GALLERY._title' | translate }}</h2>
+<h2 class="text-4xl mt-4 font-extrabold text-primary-100 text-center dark:text-primary-50">{{ 'GALLERY._title' | translate }}</h2>
 <div class="pt-8 pb-2 px-4 mx-auto max-w-screen-xl w-full grid gap-2 grid-cols-1 place-items-center sm:grid-cols-2 lg:grid-cols-4">
   @for (prod of products; track prod.id) {
     <bae-off-card [productOff]=prod class="w-full h-full"></bae-off-card>
@@ -19,7 +19,7 @@
     </div>
   </div>
 }
-<div class="flex justify-center pb-8 lg:pb-16">
+<!--<div class="flex justify-center pb-8 lg:pb-16">
   <button  type="button" class="m-4 p-2 w-fit flex items-center justify-start text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">
     <svg class="rtl:rotate-180 w-3.5 h-3.5 mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
       <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
@@ -32,5 +32,5 @@
     </svg>
     {{ 'GALLERY._add_your_service' | translate }}
   </button>
-</div>
+</div>-->
 <!-- End Offerings Section -->
