--- a/src/app/offerings/how-it-works/how-it-works.component.html
+++ b/src/app/offerings/how-it-works/how-it-works.component.html
@@ -30,7 +30,7 @@
                   
             </div>
 
-            <div class="flex h-1/4 items-end">
+            <!--<div class="flex h-1/4 items-end">
 
                 <button type="button" class="h-fit text-blue-600 dark:text-blue-500 hover:text-white border border-primary-100 dark:border-primary-50 hover:bg-primary-100 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:text-primary-50 dark:hover:text-white dark:hover:bg-primary-50 dark:focus:ring-blue-800">
                     <svg class="w-3.5 h-3.5 mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
@@ -38,7 +38,7 @@
                     </svg>
                     {{ 'HOWITWORKS.CUSTOMERS._join' | translate }}
                 </button>
-            </div>
+            </div>-->
         </div>
         <!-- PROVIDERS -->
         <div class="border border-primary-100 dark:border-primary-50 rounded-lg p-8 md:p-12">
@@ -67,7 +67,7 @@
                   
             </div>
 
-            <div class="flex h-1/4 items-end">
+            <!--<div class="flex h-1/4 items-end">
 
                 <button type="button" class="h-fit text-blue-600 dark:text-blue-500 hover:text-white border border-primary-100 dark:border-primary-50 hover:bg-primary-100 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:text-primary-50 dark:hover:text-white dark:hover:bg-primary-50 dark:focus:ring-blue-800">
                     <svg class="w-3.5 h-3.5 mr-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
@@ -75,7 +75,7 @@
                     </svg>
                     {{ 'HOWITWORKS.PROVIDERS._join' | translate }}
                 </button>
-            </div>
+            </div>-->
         </div>
     </div>
   </div>
