--- a/src/app/offerings/platform-benefits/platform-benefits.component.html
+++ b/src/app/offerings/platform-benefits/platform-benefits.component.html
@@ -16,13 +16,13 @@
             
             <p class="h-2/4 text-lg font-normal text-gray-500 dark:text-gray-400 mb-4">{{ 'PLATFORM.OPEN._desc' | translate }}</p>
 
-            <div class="flex h-1/4 align-bottom">
+            <!--<div class="flex h-1/4 align-bottom">
                 <a href="#" class="text-blue-600 dark:text-blue-500 hover:underline font-medium text-lg inline-flex items-center">{{ 'PLATFORM._learn_more' | translate }}
                     <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                     </svg>
                     </a>
-            </div>
+            </div>-->
 
         </div>
         <!-- INTEROPERABLE -->
@@ -37,13 +37,13 @@
             </div>
             
             <p class="h-2/4 text-lg font-normal text-gray-500 dark:text-gray-400 mb-4">{{ 'PLATFORM.INTEROPERABLE._desc' | translate }}</p>
-            <div class="flex h-1/4 align-bottom">
+            <!--<div class="flex h-1/4 align-bottom">
                 <a href="#" class="text-blue-600 dark:text-blue-500 hover:underline font-medium text-lg inline-flex items-center">{{ 'PLATFORM._learn_more' | translate }}
                     <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                     </svg>
                 </a>
-            </div>
+            </div>-->
         </div>
         <!-- TRUSTWORTHY -->
         <div class="border border-primary-100 dark:border-primary-50 rounded-lg p-8 md:p-12">
@@ -57,13 +57,13 @@
             </div>
             
             <p class="h-2/4 text-lg font-normal text-gray-500 dark:text-gray-400 mb-4">{{ 'PLATFORM.TRUSTWORTHY._desc' | translate }}</p>
-            <div class="flex h-1/4 align-bottom">
+            <!--<div class="flex h-1/4 align-bottom">
                 <a href="#" class="text-blue-600 dark:text-blue-500 hover:underline font-medium text-lg inline-flex items-center">{{ 'PLATFORM._learn_more' | translate }}
                     <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                     </svg>
                 </a>
-            </div>
+            </div>-->
         </div>
         <!-- COMPLIANT -->
         <div class="border border-primary-100 dark:border-primary-50 rounded-lg p-8 md:p-12">
@@ -77,13 +77,13 @@
             </div>
             
             <p class="h-2/4 text-lg font-normal text-gray-500 dark:text-gray-400 mb-4">{{ 'PLATFORM.COMPLIANT._desc' | translate }}</p>
-            <div class="flex h-1/4 align-bottom">
+            <!--<div class="flex h-1/4 align-bottom">
                 <a href="#" class="text-blue-600 dark:text-blue-500 hover:underline font-medium text-lg inline-flex items-center">{{ 'PLATFORM._learn_more' | translate }}
                     <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                     </svg>
                 </a>
-            </div>
+            </div>-->
         </div>
         <!-- SUSTAINABLE -->
         <div class="border border-primary-100 dark:border-primary-50 rounded-lg p-8 md:p-12">
@@ -97,13 +97,13 @@
             </div>
             
             <p class="h-2/4 text-lg font-normal text-gray-500 dark:text-gray-400 mb-4">{{ 'PLATFORM.SUSTAINABLE._desc' | translate }}</p>
-            <div class="flex h-1/4 align-bottom">
+            <!--<div class="flex h-1/4 align-bottom">
                 <a href="#" class="text-blue-600 dark:text-blue-500 hover:underline font-medium text-lg inline-flex items-center">{{ 'PLATFORM._learn_more' | translate }}
                     <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                     </svg>
                 </a>
-            </div>
+            </div>-->
         </div>  
         <!-- TRANSPARENT -->
         <div class="border border-primary-100 dark:border-primary-50 rounded-lg p-8 md:p-12">
@@ -117,13 +117,13 @@
             </div>
             
             <p class="h-2/4 text-lg font-normal text-gray-500 dark:text-gray-400 mb-4">{{ 'PLATFORM.TRANSPARENT._desc' | translate }}</p>
-            <div class="flex h-1/4 align-bottom">
+            <!--<div class="flex h-1/4 align-bottom">
                 <a href="#" class="text-blue-600 dark:text-blue-500 hover:underline font-medium text-lg inline-flex items-center">{{ 'PLATFORM._learn_more' | translate }}
                     <svg class="w-3.5 h-3.5 ml-2" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 10">
                         <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M1 5h12m0 0L9 1m4 4L9 9"/>
                     </svg>
                 </a>
-            </div>
+            </div>-->
         </div>  
     </div>
   </div>
