--- a/src/app/pages/checkout/checkout.component.html
+++ b/src/app/pages/checkout/checkout.component.html
@@ -24,13 +24,13 @@
             <p class="text-lg capitalize text-heading lg:text-xl">{{ 'SHOPPING_CART._contact' | translate }}</p>
           </div>
 
-          <button
+          <!--<button
             class="flex items-center text-sm font-semibold text-accent transition-colors duration-200 hover:text-accent-hover focus:text-accent-hover focus:outline-0">
             <svg fill="none" viewBox="0 0 24 24" stroke="currentColor" class="h-4 w-4 stroke-2 ltr:mr-0.5 rtl:ml-0.5">
               <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6m0 0v6m0-6h6m-6 0H6"></path>
             </svg>
             {{ 'SHOPPING_CART._update' | translate }}
-          </button>
+          </button>-->
         </div>
         <div class="w-full">
           <div class="">
