--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -3,13 +3,13 @@
 <!-- Jumbo section -->
 <section id="jumbo" class="w-full items-center">
     <div class="pt-8 pb-8 px-4 w-full text-center lg:pt-16 lg:px-12 bg-cover bg-right-bottom items-center" style="background-image: url(assets/images/bg_1_shadow.png)">
-        <a href="#" class="inline-flex justify-between items-center py-1 px-1 pr-4 mb-7 text-sm rounded-full bg-gray-800 text-white hover:bg-gray-700" role="alert">
+        <!--<a href="#" class="inline-flex justify-between items-center py-1 px-1 pr-4 mb-7 text-sm rounded-full bg-gray-800 text-white hover:bg-gray-700" role="alert">
           <span class="text-xs bg-primary-100 rounded-full text-white px-4 py-1.5 mr-3">{{ 'DASHBOARD._new' | translate }}</span> <span class="text-sm font-medium">{{ 'DASHBOARD._title' | translate }}</span>
           <svg class="ml-2 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clip-rule="evenodd"></path></svg>
-        </a>
+        </a>-->
         <h1 class="mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-5xl lg:text-6xl text-secondary-50">{{ 'DASHBOARD._header' | translate }}</h1>
         <p class="mb-8 text-lg font-normal lg:text-xl sm:px-16 xl:px-48 text-secondary-50">{{ 'DASHBOARD._subheader' | translate }}</p>
-        <div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
+        <!--<div class="flex flex-col space-y-4 sm:flex-row sm:justify-center sm:space-y-0 sm:space-x-4">
           <a href="https://dome-marketplace.eu/" target="_blank" class="inline-flex justify-center items-center py-3 px-5 text-base font-medium text-center text-white rounded-lg bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:ring-primary-300 dark:focus:ring-primary-900">
             {{ 'DASHBOARD._learn_more' | translate }}
             <svg class="ml-2 -mr-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10.293 3.293a1 1 0 011.414 0l6 6a1 1 0 010 1.414l-6 6a1 1 0 01-1.414-1.414L14.586 11H3a1 1 0 110-2h11.586l-4.293-4.293a1 1 0 010-1.414z" clip-rule="evenodd"></path></svg>
@@ -18,13 +18,13 @@
             <svg class="mr-2 -ml-1 w-5 h-5" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2 6a2 2 0 012-2h6a2 2 0 012 2v8a2 2 0 01-2 2H4a2 2 0 01-2-2V6zM14.553 7.106A1 1 0 0014 8v4a1 1 0 00.553.894l2 1A1 1 0 0018 13V7a1 1 0 00-1.447-.894l-2 1z"></path></svg>
             {{ 'DASHBOARD._video' | translate }}
           </a>
-      </div>
+      </div>-->
 
     </div>
   </section>
   <!-- End Jumbo section -->
 
-  <section class="content mx-auto z-20 pt-8 pb-5 px-4 mx-auto max-w-screen-xl lg:pb-5 lg:pt-16 w-full flex items-center" [ngClass]="isFilterPanelShown ? 'sticky top-[118px] backdrop-blur-sm': 'sticky top-[72px] backdrop-blur-sm'">
+  <!--<section class="content mx-auto z-20 pt-8 pb-5 px-4 mx-auto max-w-screen-xl lg:pb-5 lg:pt-16 w-full flex items-center" [ngClass]="isFilterPanelShown ? 'sticky top-[118px] backdrop-blur-sm': 'sticky top-[72px] backdrop-blur-sm'">
     <form class="mx-5 w-full">
       <div class="flex">
         <label for="search-dropdown" class="mb-2 text-sm font-medium text-gray-900 sr-only dark:text-white">Your Email</label>
@@ -58,7 +58,7 @@
         </div>
       </div>
     </form>
-  </section>
+  </section>-->
 
   <bae-off-gallery></bae-off-gallery>
   <app-how-it-works></app-how-it-works>
