--- a/src/app/pages/product-inventory/inventory-items/inventory-products/inventory-products.component.html
+++ b/src/app/pages/product-inventory/inventory-items/inventory-products/inventory-products.component.html
@@ -1,6 +1,6 @@
 <div class="flex flex-row p-4 justify-end">
     <!-- HEADER SEARCH BAR -->
-    <form class="max-w-lg w-1/2 pr-4 z-10">
+    <!--<form class="max-w-lg w-1/2 pr-4 z-10">
             <div class="relative">
                 <input type="search" id="search" [formControl]="searchField" class="block p-2.5 w-full z-20 text-sm text-gray-900 bg-gray-50 rounded-lg border-s-gray-50 border-s-2 border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-s-gray-700  dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:border-blue-500"
                 placeholder="Filter products..." />
@@ -11,7 +11,7 @@
                     <span class="ml-2">Search</span>
                 </button>
             </div>
-    </form>
+    </form>-->
     <!-- FILTERS -->
     <div>
         <button id="dropdownDefault" data-dropdown-toggle="dropdown"
@@ -118,7 +118,7 @@
                                 <div class="tooltip-arrow" data-popper-arrow></div>
                             </div>
                             }
-                            @if(inv.status == 'suspended'){
+                            <!--@if(inv.status == 'suspended'){
                             <button type="button" data-tooltip-target="renew-default" (click)="showRenewModal(inv);$event.stopPropagation();" class="flex text-blue-600 border border-blue-600 hover:bg-blue-600 hover:text-white focus:ring-4 focus:outline-none focus:ring-blue-400 font-medium rounded-full text-sm p-2 text-center inline-flex items-center">
                                 <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m16 10 3-3m0 0-3-3m3 3H5v3m3 4-3 3m0 0 3 3m-3-3h14v-3"/>
@@ -129,7 +129,7 @@
                                 Renew
                                 <div class="tooltip-arrow" data-popper-arrow></div>
                             </div>
-                            }
+                            }-->
                         </div>
 
                         <markdown class="min-h-19 h-19 line-clamp-2 text-gray-600" [data]="inv.product?.description"></markdown>
