--- a/src/app/pages/seller-offerings/offerings/seller-product-spec/seller-product-spec.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-product-spec/seller-product-spec.component.html
@@ -7,7 +7,7 @@
         </div>
 
         <div class="flex flex-row w-full justify-end">
-            <form class="max-w-lg w-1/2 pr-4 z-10">
+            <!--<form class="max-w-lg w-1/2 pr-4 z-10">
                 <div class="relative">
                     <input type="search" id="search" [formControl]="searchField" class="block p-2.5 w-full z-20 text-sm text-gray-900 bg-white shadow rounded-lg border-s-gray-50 border-s-2 border border-gray-300 focus:ring-blue-500 focus:border-blue-500"
                     placeholder="Filter product specifications..." />
@@ -18,7 +18,7 @@
                         <span class="ml-2">{{ 'OFFERINGS._search' | translate }}</span>
                     </button>
                 </div>
-              </form>
+              </form>-->
             <button (click)="goToCreate()" type="button" class="ml-2 mr-8 mb-4 text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center align-middle me-2">
                 <p class="pl-2 pr-2">{{ 'OFFERINGS._add_new_prod' | translate }}</p>
                 <svg class="w-[18px] h-[18px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
@@ -91,7 +91,7 @@
       </div> 
 
 
-      <div class="p-8 w-full">
+      <!--<div class="p-8 w-full">
         <div class="flex flex-row mb-1">
           <fa-icon [icon]="faSparkles" class="fa-base text-primary-100 align-middle mr-2"></fa-icon>
           <h2 class="text-base font-bold">{{ 'OFFERINGS._filter_type' | translate }}</h2>
@@ -114,7 +114,7 @@
           <option value="update">{{ 'OFFERINGS._last_update' | translate }}</option>
           <option value="name">{{ 'OFFERINGS._name' | translate }}</option>
         </select>
-      </div>
+      </div>-->
 
 
     </div>
@@ -184,12 +184,12 @@
                                     <path fill-rule="evenodd" d="M14 4.182A4.136 4.136 0 0 1 16.9 3c1.087 0 2.13.425 2.899 1.182A4.01 4.01 0 0 1 21 7.037c0 1.068-.43 2.092-1.194 2.849L18.5 11.214l-5.8-5.71 1.287-1.31.012-.012Zm-2.717 2.763L6.186 12.13l2.175 2.141 5.063-5.218-2.141-2.108Zm-6.25 6.886-1.98 5.849a.992.992 0 0 0 .245 1.026 1.03 1.03 0 0 0 1.043.242L10.282 19l-5.25-5.168Zm6.954 4.01 5.096-5.186-2.218-2.183-5.063 5.218 2.185 2.15Z" clip-rule="evenodd"/>
                                 </svg>
                             </button>
-                            <button type="button" class="text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2">
+                            <!--<button type="button" class="text-white bg-primary-100 hover:bg-primary-50 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-full text-sm p-2.5 text-center inline-flex items-center me-2">
                                 <svg class="w-[18px] h-[18px] text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                     <path stroke="currentColor" stroke-width="2" d="M21 12c0 1.2-4.03 6-9 6s-9-4.8-9-6c0-1.2 4.03-6 9-6s9 4.8 9 6Z"/>
                                     <path stroke="currentColor" stroke-width="2" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
                                 </svg>                                  
-                            </button>
+                            </button>-->
                         </td>
                     </tr>
                 } @empty {
