--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 
-<div class="">
+<div class="dark:bg-secondary-200">
 <!-- Jumbo section -->
 <section id="jumbo" class="w-full items-center">
     <div class="pt-8 pb-8 px-4 w-full text-center lg:pt-16 lg:px-12 bg-cover bg-right-bottom items-center" style="background-image: url(assets/images/bg_1_shadow.png)">
