--- a/src/app/pages/seller-offerings/offerings/seller-catalogs/update-catalog/update-catalog.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-catalogs/update-catalog/update-catalog.component.html
@@ -2,11 +2,11 @@
 <div>
     <!-- Breadcrumb -->
     <div class="pb-4">
-        <nav class="flex px-5 py-3 text-gray-700 border border-gray-200 rounded-lg bg-secondary-50 dark:bg-white" aria-label="Breadcrumb">
+        <nav class="flex px-5 py-3 text-gray-700 border border-secondary-50 rounded-lg bg-secondary-50 dark:bg-secondary-100 dark:border-gray-800" aria-label="Breadcrumb">
             <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
             <li class="inline-flex items-center">
-                <button (click)="goBack()" class="inline-flex items-center text-sm font-medium text-gray-700 hover:text-blue-600">
-                <svg class="w-3 h-3 mr-2 text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 12 10">
+                <button (click)="goBack()" class="inline-flex items-center text-sm font-medium text-gray-500 dark:text-white hover:text-primary-100 dark:hover:text-primary-50">
+                <svg class="w-3 h-3 mr-2 text-gray-400 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 12 10">
                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.5" d="M5 1 1 5l4 4m6-8L7 5l4 4"/>
                 </svg>
                 {{ 'UPDATE_CATALOG._back' | translate }}
@@ -14,10 +14,10 @@
             </li>
             <li aria-current="page">
                 <div class="flex items-center">
-                <svg class="rtl:rotate-180  w-3 h-3 mx-1 text-gray-400" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
+                <svg class="rtl:rotate-180  w-3 h-3 mx-1 text-gray-400 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 6 10">
                     <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 9 4-4-4-4"/>
                 </svg>
-                <span class="ms-1 text-sm font-medium text-gray-500 md:ms-2 ">{{ 'UPDATE_CATALOG._update' | translate }}</span>
+                <span class="ms-1 text-sm font-medium text-gray-500 dark:text-white md:ms-2 ">{{ 'UPDATE_CATALOG._update' | translate }}</span>
                 </div>
             </li>
             </ol>
@@ -25,14 +25,14 @@
     </div>
   <!-- End Breadcrumb -->
 
-  <div class="bg-secondary-50 dark:bg-white mt-4 p-8 rounded-lg">
-    <h2 class="text-3xl font-bold text-primary-100 ml-4">{{ 'UPDATE_CATALOG._update' | translate }}</h2>
+  <div class="bg-secondary-50 dark:bg-secondary-100 border border-secondary-50 dark:border-gray-800 mt-4 p-8 rounded-lg">
+    <h2 class="text-3xl font-bold text-primary-100 dark:text-white ml-4">{{ 'UPDATE_CATALOG._update' | translate }}</h2>
     <hr class="h-px m-4 bg-gray-300 dark:bg-gray-200 border-0">
     <div class="grid grid-cols-20/80">
         <div class="flex flex-col mr-4">
-            <h2 class="text-xl font-bold text-black mb-4">{{ 'UPDATE_CATALOG._steps' | translate }}</h2>
-            <button id="general-info" (click)="toggleGeneral()"  class="grid grid-cols-20/80 mb-2 text-primary-100">
-                <span id="general-circle" class="flex items-center justify-center w-8 h-8 border border-2 border-primary-100 rounded-full shrink-0">
+            <h2 class="text-xl font-bold text-black mb-4 dark:text-white">{{ 'UPDATE_CATALOG._steps' | translate }}</h2>
+            <button id="general-info" (click)="toggleGeneral()"  class="grid grid-cols-20/80 mb-2 text-primary-100 dark:text-primary-50">
+                <span id="general-circle" class="flex items-center justify-center w-8 h-8 border border-2 border-primary-100 dark:border-primary-50 rounded-full shrink-0">
                     1
                 </span>
                 <span>
@@ -41,7 +41,7 @@
                 </span>
             </button>
             <hr class="h-px mb-2 bg-gray-300 dark:bg-gray-200 border-0">
-            <button id="summary" (click)="showFinish()" class="grid grid-cols-20/80 mb-2">
+            <button id="summary" (click)="showFinish()" class="grid grid-cols-20/80 mb-2 text-gray-500">
                 <span id="summary-circle" class="flex items-center justify-center w-8 h-8 border border-2 border-gray-400 rounded-full shrink-0">
                     2
                 </span>
@@ -53,19 +53,19 @@
         </div>
         <div>
             @if(showGeneral){
-                <h2 class="text-3xl font-bold text-primary-100 ml-4">{{ 'UPDATE_CATALOG._general' | translate }}</h2>
+                <h2 class="text-3xl font-bold text-primary-100 dark:text-white ml-4">{{ 'UPDATE_CATALOG._general' | translate }}</h2>
                     <form class="m-4 gap-4" [formGroup]="generalForm">
-                        <label for="prod-name" class="font-bold text-lg">{{ 'UPDATE_CATALOG._name' | translate }}</label>
+                        <label for="prod-name" class="font-bold text-lg dark:text-white">{{ 'UPDATE_CATALOG._name' | translate }}</label>
                         <input formControlName="name" type="text" id="prod-name"
                         [ngClass]="generalForm.get('name')?.invalid == true && generalForm.value.name!='' ? 'border-red-600' : 'border-gray-300'"
                         class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
 
-                        <label class="font-bold text-lg">{{ 'UPDATE_CATALOG._status' | translate }}</label>
+                        <label class="font-bold text-lg dark:text-white">{{ 'UPDATE_CATALOG._status' | translate }}</label>
                         <div class="mb-2">
 
-                            <ol class="flex items-center w-full text-sm font-medium text-center text-gray-500 dark:text-gray-400 sm:text-base">
+                            <ol class="flex items-center w-full text-sm font-medium text-center text-gray-500 dark:text-gray-200 sm:text-base">
                                 @if(catStatus=='Active'){
-                                    <li (click)="setCatStatus('Active')" class="cursor-pointer flex w-full items-center text-blue-500 after:w-full after:h-1 after:border-b after:border-gray-700 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10">
+                                    <li (click)="setCatStatus('Active')" class="cursor-pointer flex w-full items-center text-blue-500 after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10">
                                         <span class="flex items-center">
                                             <svg class="w-6 h-6 text-blue-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8.737 8.737a21.49 21.49 0 0 1 3.308-2.724m0 0c3.063-2.026 5.99-2.641 7.331-1.3 1.827 1.828.026 6.591-4.023 10.64-4.049 4.049-8.812 5.85-10.64 4.023-1.33-1.33-.736-4.218 1.249-7.253m6.083-6.11c-3.063-2.026-5.99-2.641-7.331-1.3-1.827 1.828-.026 6.591 4.023 10.64m3.308-9.34a21.497 21.497 0 0 1 3.308 2.724m2.775 3.386c1.985 3.035 2.579 5.923 1.248 7.253-1.336 1.337-4.245.732-7.295-1.275M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
@@ -74,14 +74,14 @@
                                         </span>
                                     </li>
                                 }@else{
-                                    <li (click)="setCatStatus('Active')" class="cursor-pointer flex w-full items-center text-gray-800 after:w-full after:h-1 after:border-b after:border-gray-700 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10">
+                                    <li (click)="setCatStatus('Active')" class="cursor-pointer flex w-full items-center after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10">
                                         <span class="flex items-center">                                    
                                             Active
                                         </span>
                                     </li>
                                 }
                                 @if(catStatus=='Launched'){
-                                    <li (click)="setCatStatus('Launched')" class="cursor-pointer flex md:w-full items-center text-green-700 after:w-full after:h-1 after:border-b after:border-gray-700 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10">
+                                    <li (click)="setCatStatus('Launched')" class="cursor-pointer flex md:w-full items-center text-green-700 after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10">
                                         <span class="flex items-center">
                                             <svg class="w-6 h-6 text-green-700" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8.737 8.737a21.49 21.49 0 0 1 3.308-2.724m0 0c3.063-2.026 5.99-2.641 7.331-1.3 1.827 1.828.026 6.591-4.023 10.64-4.049 4.049-8.812 5.85-10.64 4.023-1.33-1.33-.736-4.218 1.249-7.253m6.083-6.11c-3.063-2.026-5.99-2.641-7.331-1.3-1.827 1.828-.026 6.591 4.023 10.64m3.308-9.34a21.497 21.497 0 0 1 3.308 2.724m2.775 3.386c1.985 3.035 2.579 5.923 1.248 7.253-1.336 1.337-4.245.732-7.295-1.275M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
@@ -90,14 +90,14 @@
                                         </span>
                                     </li>
                                 }@else{
-                                    <li (click)="setCatStatus('Launched')" class="cursor-pointer flex md:w-full items-center after:w-full after:h-1 after:border-b after:border-gray-700 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10">
+                                    <li (click)="setCatStatus('Launched')" class="cursor-pointer flex md:w-full items-center after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10">
                                         <span class="flex items-center">                                         
                                             Launched
                                         </span>
                                     </li>
                                 }
                                 @if(catStatus=='Retired'){
-                                    <li (click)="setCatStatus('Retired')" class="cursor-pointer flex md:w-full items-center text-yellow-500 after:w-full after:h-1 after:border-b after:border-gray-700 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10">
+                                    <li (click)="setCatStatus('Retired')" class="cursor-pointer flex md:w-full items-center text-yellow-500 after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10">
                                         <span class="flex items-center">
                                             <svg class="w-6 h-6 text-yellow-500" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8.737 8.737a21.49 21.49 0 0 1 3.308-2.724m0 0c3.063-2.026 5.99-2.641 7.331-1.3 1.827 1.828.026 6.591-4.023 10.64-4.049 4.049-8.812 5.85-10.64 4.023-1.33-1.33-.736-4.218 1.249-7.253m6.083-6.11c-3.063-2.026-5.99-2.641-7.331-1.3-1.827 1.828-.026 6.591 4.023 10.64m3.308-9.34a21.497 21.497 0 0 1 3.308 2.724m2.775 3.386c1.985 3.035 2.579 5.923 1.248 7.253-1.336 1.337-4.245.732-7.295-1.275M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
@@ -106,7 +106,7 @@
                                         </span>
                                     </li>
                                 }@else{
-                                    <li (click)="setCatStatus('Retired')" class="cursor-pointer flex md:w-full items-center after:w-full after:h-1 after:border-b after:border-gray-700 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10">
+                                    <li (click)="setCatStatus('Retired')" class="cursor-pointer flex md:w-full items-center after:w-full after:h-1 after:border-b after:border-gray-700 dark:after:border-gray-400 after:border-1 after:hidden sm:after:inline-block after:mx-6 xl:after:mx-10">
                                         <span class="flex items-center">                                        
                                             Retired
                                         </span>
@@ -114,8 +114,8 @@
                                 }
                                 @if(catStatus=='Obsolete'){
                                     <li (click)="setCatStatus('Obsolete')" class="cursor-pointer flex items-center">
-                                        <span class="flex items-center text-gray-800">
-                                            <svg class="w-6 h-6 text-gray-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                                        <span class="flex items-center text-red-800">
+                                            <svg class="w-6 h-6 text-red-800" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M8.737 8.737a21.49 21.49 0 0 1 3.308-2.724m0 0c3.063-2.026 5.99-2.641 7.331-1.3 1.827 1.828.026 6.591-4.023 10.64-4.049 4.049-8.812 5.85-10.64 4.023-1.33-1.33-.736-4.218 1.249-7.253m6.083-6.11c-3.063-2.026-5.99-2.641-7.331-1.3-1.827 1.828-.026 6.591 4.023 10.64m3.308-9.34a21.497 21.497 0 0 1 3.308 2.724m2.775 3.386c1.985 3.035 2.579 5.923 1.248 7.253-1.336 1.337-4.245.732-7.295-1.275M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0Z"/>
                                             </svg>                                          
                                             Obsolete
@@ -132,7 +132,7 @@
 
                         </div>
                         
-                        <label for="prod-name" class="font-bold text-lg">{{ 'UPDATE_CATALOG._description' | translate }}</label>
+                        <label for="prod-name" class="font-bold text-lg dark:text-white">{{ 'UPDATE_CATALOG._description' | translate }}</label>
                         <div class="w-full mb-4 border border-gray-200 rounded-lg bg-gray-50">
                             <div class="flex items-center justify-between px-3 py-2 border-b">
                                 <div class="flex flex-wrap items-center divide-gray-200 sm:divide-x sm:rtl:divide-x-reverse">
@@ -239,25 +239,25 @@
             }
             
             @if(showSummary){
-                <h2 class="text-3xl font-bold text-primary-100 ml-4">{{ 'UPDATE_CATALOG._finish' | translate }}</h2>
+                <h2 class="text-3xl font-bold text-primary-100 dark:text-white ml-4">{{ 'UPDATE_CATALOG._finish' | translate }}</h2>
                 <div class="m-8">
                     <div>
-                        <label class="font-bold text-lg">{{ 'UPDATE_CATALOG._name' | translate }}</label>
+                        <label class="font-bold text-lg dark:text-white">{{ 'UPDATE_CATALOG._name' | translate }}</label>
                         <label class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                             {{generalForm.value.name}}
                         </label>
                     </div>
                     
                     <div class="mb-4">
-                        <label class="font-bold text-lg mr-4">{{ 'UPDATE_CATALOG._status' | translate }}</label>
+                        <label class="font-bold text-lg mr-4 dark:text-white">{{ 'UPDATE_CATALOG._status' | translate }}</label>
                         @if(catalogToUpdate?.lifecycleStatus == 'Active'){
-                            <span class="bg-blue-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-blue-400">{{catalogToUpdate?.lifecycleStatus}}</span>
+                            <span class="bg-blue-100 dark:bg-secondary-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-blue-400">{{catalogToUpdate?.lifecycleStatus}}</span>
                         } @else if(catalogToUpdate?.lifecycleStatus == 'Launched') {
-                            <span class="bg-blue-100 text-green-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-green-500">{{catalogToUpdate?.lifecycleStatus}}</span>
+                            <span class="bg-blue-100 dark:bg-secondary-100 text-green-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-green-500">{{catalogToUpdate?.lifecycleStatus}}</span>
                         } @else if(catalogToUpdate?.lifecycleStatus == 'Retired') {
-                            <span class="bg-blue-100 text-yellow-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-yellow-500">{{catalogToUpdate?.lifecycleStatus}}</span>
+                            <span class="bg-blue-100 dark:bg-secondary-100 text-yellow-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-yellow-500">{{catalogToUpdate?.lifecycleStatus}}</span>
                         } @else if(catalogToUpdate?.lifecycleStatus == 'Obsolete') {
-                            <span class="bg-blue-100 text-red-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-red-500">{{catalogToUpdate?.lifecycleStatus}}</span>
+                            <span class="bg-blue-100 dark:bg-secondary-100 text-red-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-red-500">{{catalogToUpdate?.lifecycleStatus}}</span>
                         }
                     </div>
 
