--- a/src/app/shared/categories-recursion/categories-recursion.component.html
+++ b/src/app/shared/categories-recursion/categories-recursion.component.html
@@ -1,6 +1,6 @@
 
 
-<tr class="flex border-b hover:bg-gray-200 w-full justify-between">
+<tr class="flex border-b hover:bg-gray-200 dark:border-gray-700 dark:bg-secondary-300 dark:hover:bg-secondary-200 w-full justify-between">
     <td class="flex px-6 py-4 w-3/5">
         {{path}} / <b>{{child.name}}</b>
     </td>
