--- a/src/app/pages/seller-offerings/offerings/seller-catalogs/update-catalog/update-catalog.component.html
+++ b/src/app/pages/seller-offerings/offerings/seller-catalogs/update-catalog/update-catalog.component.html
@@ -58,7 +58,7 @@
                         <label for="prod-name" class="font-bold text-lg dark:text-white">{{ 'UPDATE_CATALOG._name' | translate }}</label>
                         <input formControlName="name" type="text" id="prod-name"
                         [ngClass]="generalForm.get('name')?.invalid == true && generalForm.value.name!='' ? 'border-red-600' : 'border-gray-300'"
-                        class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
+                        class="mb-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-white text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5" />
 
                         <label class="font-bold text-lg dark:text-white">{{ 'UPDATE_CATALOG._status' | translate }}</label>
                         <div class="mb-2">
@@ -133,65 +133,65 @@
                         </div>
                         
                         <label for="prod-name" class="font-bold text-lg dark:text-white">{{ 'UPDATE_CATALOG._description' | translate }}</label>
-                        <div class="w-full mb-4 border border-gray-200 rounded-lg bg-gray-50">
+                        <div class="w-full mb-4 border border-gray-200 rounded-lg bg-gray-50 dark:bg-secondary-200 dark:border-secondary-200">
                             <div class="flex items-center justify-between px-3 py-2 border-b">
-                                <div class="flex flex-wrap items-center divide-gray-200 sm:divide-x sm:rtl:divide-x-reverse">
-                                    <div class="flex items-center space-x-1 rtl:space-x-reverse sm:pe-4">
-                                        <button (click)="addBold()" type="button" class="p-2 text-gray-500 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
+                                <div class="flex flex-wrap items-center divide-gray-200 dark:divide-secondary-200 sm:divide-x sm:rtl:divide-x-reverse">
+                                    <div class="flex items-center space-x-1 rtl:space-x-reverse sm:pe-4 text-gray-500 dark:text-gray-200">
+                                        <button (click)="addBold()" type="button" class="p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
                                             <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 5h4.5a3.5 3.5 0 1 1 0 7H8m0-7v7m0-7H6m2 7h6.5a3.5 3.5 0 1 1 0 7H8m0-7v7m0 0H6"/>
                                             </svg>                                          
                                             <span class="sr-only">Bold</span>
                                         </button>
-                                        <button (click)="addItalic()" type="button" class="p-2 text-gray-500 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
+                                        <button (click)="addItalic()" type="button" class="p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
                                             <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m8.874 19 6.143-14M6 19h6.33m-.66-14H18"/>
                                             </svg>                                                                                 
                                             <span class="sr-only">Italic</span>
                                         </button>
-                                        <button (click)="addList()" type="button" class="p-2 text-gray-500 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
+                                        <button (click)="addList()" type="button" class="p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
                                             <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-width="2" d="M9 8h10M9 12h10M9 16h10M4.99 8H5m-.02 4h.01m0 4H5"/>
                                             </svg>                                          
                                             <span class="sr-only">Add list</span>
                                         </button>
-                                        <button (click)="addOrderedList()" type="button" class="p-2 text-gray-500 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
+                                        <button (click)="addOrderedList()" type="button" class="p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
                                             <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6h8m-8 6h8m-8 6h8M4 16a2 2 0 1 1 3.321 1.5L4 20h5M4 5l2-1v6m-2 0h4"/>
                                             </svg>                                          
                                             <span class="sr-only">Add ordered list</span>
                                         </button>
-                                        <button (click)="addBlockquote()" type="button" class="p-2 text-gray-500 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
+                                        <button (click)="addBlockquote()" type="button" class="p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
                                             <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" viewBox="0 0 24 24">
                                                 <path fill-rule="evenodd" d="M5 6a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H6a1 1 0 0 1-1-1Zm0 12a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H6a1 1 0 0 1-1-1Zm1.65-9.76A1 1 0 0 0 5 9v6a1 1 0 0 0 1.65.76l3.5-3a1 1 0 0 0 0-1.52l-3.5-3ZM12 10a1 1 0 0 1 1-1h5a1 1 0 1 1 0 2h-5a1 1 0 0 1-1-1Zm0 4a1 1 0 0 1 1-1h5a1 1 0 1 1 0 2h-5a1 1 0 0 1-1-1Z" clip-rule="evenodd"/>
                                             </svg>                                         
                                             <span class="sr-only">Add blockquote</span>
                                         </button>
-                                        <button (click)="addTable()" type="button" class="p-2 text-gray-500 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
+                                        <button (click)="addTable()" type="button" class="p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
                                             <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-width="2" d="M3 11h18m-9 0v8m-8 0h16a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1H4a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1Z"/>
                                             </svg>                                         
                                             <span class="sr-only">Add table</span>
                                         </button>                                 
-                                        <button (click)="addCode()" type="button" class="p-2 text-gray-500 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
+                                        <button (click)="addCode()" type="button" class="p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
                                             <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m8 8-4 4 4 4m8 0 4-4-4-4m-2-3-4 14"/>
                                             </svg>                                        
                                             <span class="sr-only">Add code</span>
                                         </button>
-                                        <button (click)="addCodeBlock()" type="button" class="p-2 text-gray-500 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
+                                        <button (click)="addCodeBlock()" type="button" class="p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
                                             <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 3v4a1 1 0 0 1-1 1H5m5 4-2 2 2 2m4-4 2 2-2 2m5-12v16a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V7.914a1 1 0 0 1 .293-.707l3.914-3.914A1 1 0 0 1 9.914 3H18a1 1 0 0 1 1 1Z"/>
                                               </svg>                                                                                  
                                             <span class="sr-only">Add code block</span>
                                         </button>
-                                        <button (click)="addLink()" type="button" class="p-2 text-gray-500 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
+                                        <button (click)="addLink()" type="button" class="p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
                                             <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                                                 <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.213 9.787a3.391 3.391 0 0 0-4.795 0l-3.425 3.426a3.39 3.39 0 0 0 4.795 4.794l.321-.304m-.321-4.49a3.39 3.39 0 0 0 4.795 0l3.424-3.426a3.39 3.39 0 0 0-4.794-4.795l-1.028.961"/>
                                             </svg>                                                                                
                                             <span class="sr-only">Add link</span>
                                         </button>
-                                        <button (click)="showEmoji=!showEmoji;$event.stopPropagation();" type="button" class="p-2 text-gray-500 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
+                                        <button (click)="showEmoji=!showEmoji;$event.stopPropagation();" type="button" class="p-2 rounded cursor-pointer hover:text-gray-900 hover:bg-gray-100">
                                             <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 20 20">
                                                 <path d="M10 .5a9.5 9.5 0 1 0 9.5 9.5A9.51 9.51 0 0 0 10 .5ZM13.5 6a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Zm-7 0a1.5 1.5 0 1 1 0 3 1.5 1.5 0 0 1 0-3Zm3.5 9.5A5.5 5.5 0 0 1 4.6 11h10.81A5.5 5.5 0 0 1 10 15.5Z"/>
                                             </svg>
@@ -199,26 +199,26 @@
                                         </button>
                                     </div>
                                 </div>
-                                <button type="button" (click)="showPreview=!showPreview;togglePreview()" data-tooltip-target="tooltip-fullscreen" class="text-gray-500 rounded cursor-pointer sm:ms-auto hover:text-gray-900 hover:bg-gray-100">
+                                <button type="button" (click)="showPreview=!showPreview;togglePreview()" data-tooltip-target="tooltip-fullscreen" class="rounded cursor-pointer text-gray-500 dark:text-gray-200 p-2 sm:ms-auto hover:text-gray-900 dark:hover:text-gray-900 hover:bg-gray-100">
                                     <svg class="w-4 h-4" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24">
                                         <path stroke="currentColor" stroke-width="2" d="M21 12c0 1.2-4.03 6-9 6s-9-4.8-9-6c0-1.2 4.03-6 9-6s9 4.8 9 6Z"/>
                                         <path stroke="currentColor" stroke-width="2" d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"/>
                                       </svg>
                                       
-                                    <span class="sr-only">{{ 'UPDATE_CATALOG._preview' | translate }}</span>
+                                    <span class="sr-only">{{ 'CREATE_CATALOG._preview' | translate }}</span>
                                 </button>
                                 <div id="tooltip-fullscreen" role="tooltip" class="absolute z-10 invisible inline-block px-3 py-2 text-sm font-medium text-white transition-opacity duration-300 bg-gray-900 rounded-lg shadow-sm opacity-0 tooltip">
-                                    {{ 'UPDATE_CATALOG._show_preview' | translate }}
+                                    {{ 'CREATE_CATALOG._show_preview' | translate }}
                                     <div class="tooltip-arrow" data-popper-arrow></div>
                                 </div>
                             </div>
-                            <div class="px-4 py-2 bg-white rounded-b-lg">
+                            <div class="px-4 py-2 bg-white dark:bg-secondary-300 rounded-b-lg">
                                 <label for="editor" class="sr-only">Publish post</label>
                                 @if(showPreview){
-                                        <markdown [data]="description"></markdown>
+                                        <markdown class="text-gray-800 dark:text-gray-200" [data]="description"></markdown>
                                     
                                 }@else{
-                                    <textarea id="editor" formControlName="description" rows="8" class="block w-full px-0 text-sm text-gray-800 bg-white border-0" placeholder="Add product description..." ></textarea>
+                                    <textarea id="editor" formControlName="description" rows="8" class="block w-full px-0 text-sm text-gray-800 dark:text-gray-200 bg-white dark:bg-secondary-300 border-0" placeholder="Add product description..." ></textarea>
                                 }
                                 @if(showEmoji){
                                     <emoji-mart (click)="$event.stopPropagation();" [darkMode]="false" [style]="{ position: 'relative', left: '200px', top: '-500px' }" (emojiClick)="addEmoji($event)"></emoji-mart>
@@ -243,7 +243,7 @@
                 <div class="m-8">
                     <div>
                         <label class="font-bold text-lg dark:text-white">{{ 'UPDATE_CATALOG._name' | translate }}</label>
-                        <label class="mb-2 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                        <label class="mb-2 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-white text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                             {{generalForm.value.name}}
                         </label>
                     </div>
@@ -251,7 +251,7 @@
                     <div class="mb-4">
                         <label class="font-bold text-lg mr-4 dark:text-white">{{ 'UPDATE_CATALOG._status' | translate }}</label>
                         @if(catalogToUpdate?.lifecycleStatus == 'Active'){
-                            <span class="bg-blue-100 dark:bg-secondary-100 text-blue-800 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-blue-400">{{catalogToUpdate?.lifecycleStatus}}</span>
+                            <span class="bg-blue-100 dark:bg-secondary-100 text-blue-600 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-blue-400">{{catalogToUpdate?.lifecycleStatus}}</span>
                         } @else if(catalogToUpdate?.lifecycleStatus == 'Launched') {
                             <span class="bg-blue-100 dark:bg-secondary-100 text-green-500 text-xs font-medium me-2 px-2.5 py-0.5 rounded border border-green-500">{{catalogToUpdate?.lifecycleStatus}}</span>
                         } @else if(catalogToUpdate?.lifecycleStatus == 'Retired') {
@@ -262,9 +262,9 @@
                     </div>
 
                     @if(catalogToUpdate?.description !=''){
-                        <label class="font-bold text-lg">{{ 'UPDATE_CATALOG._description' | translate }}</label>
-                        <div class="px-4 py-2 bg-white rounded-lg p-4 mb-2">
-                            <markdown [data]="catalogToUpdate?.description"></markdown>
+                        <label class="font-bold text-lg dark:text-white">{{ 'UPDATE_CATALOG._description' | translate }}</label>
+                        <div class="px-4 py-2 bg-white rounded-lg p-4 mb-4 bg-gray-50 dark:bg-secondary-300 border border-gray-300 dark:border-secondary-200 dark:text-white text-gray-900">
+                            <markdown class="bg-gray-50 dark:bg-secondary-300 dark:text-white text-gray-900" [data]="catalogToUpdate?.description"></markdown>
                         </div>
                     }
                     
